<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_margin="20dp"
    android:background="@color/create_chat_room_fragment_color"
    >

    <TextView
        android:id="@+id/textViewTopicCreateChatRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="Create Your Chat Room"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextChatRoomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/chat_room_name"
        android:inputType="text"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextChatRoomDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTopicCreateChatRoom" />

    <EditText
        android:id="@+id/editTextTextChatRoomDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextChatRoomName"
        android:layout_marginTop="10dp"
        android:layout_margin="20dp"
        android:hint="Chat Room Description"
        tools:layout_editor_absoluteY="212dp" />

    <Button
        android:id="@+id/btnChatRoomCreateCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextChatRoomDescription" />

    <Button
        android:id="@+id/btnChatRoomCreateCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/btnChatRoomCreateCancel"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextChatRoomDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>